# ccbi2ccb

./: .gitignore  CMakeLists.txt  build.bat  ccbi2ccb.sln  ccbi2ccb.vcxproj  common.cpp  run.bat  test.bat
src/: ccbi2ccb.cpp
